[gd_scene load_steps=11 format=3 uid="uid://bp0arxvt25c6j"]

[ext_resource type="Script" path="res://interface/main_menu/main_menu.gd" id="1_gyb1w"]
[ext_resource type="Texture2D" uid="uid://b0pj8njlsujew" path="res://interface/main_menu/main_menu_background.png" id="2_u7wcc"]
[ext_resource type="FontFile" uid="uid://d0tl7mqw2pq4x" path="res://interface/fonts/m5x7.ttf" id="6_gtsat"]
[ext_resource type="Texture2D" uid="uid://cqdx35pufkvqj" path="res://interface/panels/button_normal_scaled.png" id="7_jvy8h"]
[ext_resource type="Texture2D" uid="uid://b3n2f5w2ceegu" path="res://interface/panels/button_hover_scaled.png" id="8_504ql"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sm7bu"]
texture = ExtResource("7_jvy8h")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0g0xi"]
texture = ExtResource("8_504ql")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_a1igv"]
load_path = "res://.godot/imported/button_normal_scaled.png-c55a5c4411563b09e779b375978f00c0.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ru563"]
texture = SubResource("CompressedTexture2D_a1igv")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4y0cs"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.976471, 0.760784, 0.168627, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_gyb1w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u7wcc")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
offset_left = 96.0
offset_top = 160.0
offset_right = 480.0
offset_bottom = 314.0

[node name="PlayButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
size_flags_vertical = 10
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.270588, 0.160784, 0.247059, 1)
theme_override_colors/font_pressed_color = Color(0.270588, 0.160784, 0.247059, 1)
theme_override_colors/font_hover_color = Color(0.270588, 0.160784, 0.247059, 1)
theme_override_colors/font_focus_color = Color(0.270588, 0.160784, 0.247059, 1)
theme_override_colors/font_hover_pressed_color = Color(0.270588, 0.160784, 0.247059, 1)
theme_override_fonts/font = ExtResource("6_gtsat")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxTexture_sm7bu")
theme_override_styles/hover = SubResource("StyleBoxTexture_0g0xi")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ru563")
theme_override_styles/focus = SubResource("StyleBoxFlat_4y0cs")
text = "Play"

[node name="HowToButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
size_flags_vertical = 10
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.270588, 0.160784, 0.247059, 1)
theme_override_colors/font_pressed_color = Color(0.270588, 0.160784, 0.247059, 1)
theme_override_colors/font_hover_color = Color(0.270588, 0.160784, 0.247059, 1)
theme_override_colors/font_focus_color = Color(0.270588, 0.160784, 0.247059, 1)
theme_override_colors/font_hover_pressed_color = Color(0.270588, 0.160784, 0.247059, 1)
theme_override_fonts/font = ExtResource("6_gtsat")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxTexture_sm7bu")
theme_override_styles/hover = SubResource("StyleBoxTexture_0g0xi")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ru563")
theme_override_styles/focus = SubResource("StyleBoxFlat_4y0cs")
text = "How To Play"

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HowToButton" to="." method="_on_how_to_button_pressed"]
